[project]
name = "mineskin"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]
authors = [{ name = "Kiber2009", email = "92222946+kiber2009@users.noreply.github.com" }]
description = "Simple Python library for working with Minecraft skins"
readme = "README.md"
license = "MIT"
keywords = ["minecraft skin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.16",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
    "Natural Language :: English"
]

[project.urls]
Homepage = "https://github.com/Kiber2009/mineskin"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Kiber2009/mineskin.git"
Issues = "https://github.com/Kiber2009/mineskin/issues"
#Changelog = "https://github.com/Kiber2009/mineskin/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
